1.2.2 to 1.2.3
----------------------------------------------------------------------
- Tweaked the availability report format from suggestions from the
  list.
- Removed the possibility that 0.0.0.0 would show up as the IP
  address for a service in the ifservices table. Thx Bill
- Applied final version of poll outage editor. Bug 1116. Thx Craig

1.2.1 to 1.2.2
----------------------------------------------------------------------
- Fixed an issue with the webUI and null issnmpprimary values.

1.2.0 to 1.2.1
----------------------------------------------------------------------
- Fix source RPM builds ("srpm" build target).  Bug 1112.  Thanks, Tarus.
- An Admin GUI is now available to modify snmp-config.xml. Bug 1167
  Thx Gerald
- Added the ability to remove "secondary" status from interfaces
  via the SNMP Collection Admin UI, and added a direct link
  from the node admin page to the particular node's configuration
  page.
- Applied the patch to help with 30 second outages. Bug 1180. 
  Thx Tobey
- Added package name to Interface page for admins. Bug 1044. Thx Bill
- Extended the varbind matching in Notifications. Bug 1032. Thx Wiktor
- Added mib2.packets report. Bug 1179. Thx Andy
- Made some improvements to the node page. Bug 1018. Thx Bill
- Added notification selection to top of page. Bug 1017. Thx Bill
- Added nodeid to modify asset page. Bug 785
- Added a new and improved DHCP poller. Bug 663. Thx Bill
- Added a more descriptive error message when an invalid outage ID
  is entered in the webUI. Bug 498
- Added display of ifAlias in an event or notification.  It uses the nodeid
  and the ipaddr to find it.  Use %ifalias% to see this in the event or 
  notification.  Bug 1140
- Fix the opennms init script so that it works properly with chkconfig.
  Bug 1177.  Thanks Julian Gomez <JulianJose.Gomez@getronics.com>.
- Fixed the Configure SNMP Data Collection per Interface UI to be
  much faster and to handle null issnmpprimary values.